--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  "presets" : ["es2015", "react", "stage-2"]
+  "presets": ["react", "es2015", "stage-2"],
+  "env": {
+    // only enable it when process.env.NODE_ENV is 'development' or undefined
+    "development": {
+      "plugins": ["react-hot-loader/babel"]
+    }
+  }
 }
