--- a/package.json
+++ b/package.json
@@ -5,7 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "npm run test",
-    "start": "node server.js"
+    "watch:test": "npm test -- --auto-watch --no-single-run",
+    "validate-webpack:dev": "webpack-validator webpack.config.js && NODE_ENV=development",
+    "validate-webpack:prod": "webpack-validator webpack.config.js && NODE_ENV=production",
+    "clean-dist": "rimraf dist",
+    "clean-and-copy": "npm run clean-dist && mkdir dist && cp index.html dist",
+    "prestart": "npm run clean-and-copy",
+    "start": "webpack-dev-server --content-base dist && NODE_ENV=development",
+    "prebuild": "npm run clean-and-copy",
+    "prebuild:prod": "npm run clean-and-copy",
+    "build": "webpack && NODE_ENV=development",
+    "build:prod": "webpack && NODE_ENV=production -p"
   },
   "repository": {
     "type": "git",
@@ -25,7 +35,9 @@
     "react": "^15.3.2",
     "react-css-modules": "^3.7.10",
     "react-dom": "^15.3.2",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "react-redux": "^4.1.0",
+    "redux": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.0",
@@ -37,6 +49,10 @@
     "precss": "^1.4.0",
     "react-hot-loader": "^3.0.0-beta.5",
     "style-loader": "^0.13.1",
-    "webpack-dev-server": "^1.16.1"
+    "redux-devtools": "^3.0.1",
+    "redux-devtools-dock-monitor": "^1.0.1",
+    "redux-devtools-log-monitor": "^1.0.2",
+    "webpack-dev-server": "^1.16.1",
+    "webpack-validator": "^2.2.8"
   }
 }
