--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "react": "^15.3.2",
     "react-css-modules": "^3.7.10",
     "react-dom": "^15.3.2",
-    "webpack": "^1.13.2",
-    "react-redux": "^4.1.0",
-    "redux": "^3.1.1"
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "webpack": "^1.13.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.0",
@@ -48,10 +48,10 @@
     "postcss-safe-parser": "^2.0.0",
     "precss": "^1.4.0",
     "react-hot-loader": "^3.0.0-beta.5",
-    "style-loader": "^0.13.1",
-    "redux-devtools": "^3.0.1",
+    "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.0.1",
     "redux-devtools-log-monitor": "^1.0.2",
+    "style-loader": "^0.13.1",
     "webpack-dev-server": "^1.16.1",
     "webpack-validator": "^2.2.8"
   }
