Update the resolve setting in webpack and make redux-saga work

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean-dist": "rimraf dist",
     "clean-and-copy": "npm run clean-dist && mkdir dist && cp index.html dist",
     "prestart": "npm run clean-and-copy",
-    "start": "webpack-dev-server --content-base dist && NODE_ENV=development",
+    "start": "node server.js",
     "prebuild": "npm run clean-and-copy",
     "prebuild:prod": "npm run clean-and-copy",
     "build": "webpack && NODE_ENV=development",
@@ -35,13 +35,16 @@
     "react": "^15.3.2",
     "react-css-modules": "^3.7.10",
     "react-dom": "^15.3.2",
-    "react-redux": "^4.4.5",
     "react-hot-loader": "^3.0.0-beta.5",
+    "react-redux": "^4.4.5",
     "redux": "^3.6.0",
+    "redux-logger": "^2.6.1",
+    "redux-saga": "^0.14.3",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-stage-2": "^6.17.0",
     "css-loader": "^0.25.0",
     "postcss-import": "^8.1.2",
