--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,9 @@
 {
-  "presets": ["react", "es2015", "stage-2"],
+  "presets": [
+    ["es2015", {"modules": false}],
+    "stage-2",
+    "react"
+  ],
   "env": {
     // only enable it when process.env.NODE_ENV is 'development' or undefined
     "development": {
