--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean-dist": "rimraf dist",
     "clean-and-copy": "npm run clean-dist && mkdir dist && cp index.html dist",
     "prestart": "npm run clean-and-copy",
-    "start": "node server.js",
+    "start": "node_modules/.bin/webpack-dev-server",
     "prebuild": "npm run clean-and-copy",
     "prebuild:prod": "npm run clean-and-copy",
     "build": "webpack && NODE_ENV=development",
@@ -46,9 +46,14 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.5.0",
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.16.0",
-    "babel-preset-stage-2": "^6.17.0",
-    "css-loader": "^0.25.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-2": "^6.13.0",
+    "css-loader": "^0.23.1",
+    "css-mqpacker": "^5.0.1",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.6.3",
@@ -56,15 +61,16 @@
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
     "eslint-watch": "^3.0.1",
-    "postcss-import": "^8.1.2",
-    "postcss-loader": "^0.13.0",
+    "postcss-import": "^8.0.2",
+    "postcss-loader": "^0.9.1",
     "postcss-safe-parser": "^2.0.0",
     "precss": "^1.4.0",
+    "react-hot-loader": "^3.0.0-beta.6",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.0.11",
     "style-loader": "^0.13.1",
-    "webpack-dev-server": "^1.16.1",
+    "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-validator": "^2.2.8"
   }
 }
